feat(coach): add backend-guided hierarchical focus widening
- recommend the nearest useful ancestor after focus completion
- preserve independent focus roots when widening one branch
- accept only fresh published scope-option payloads
- keep prerequisite mastery strictly directional